--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "pinia": "^2.1.7",
-    "vue": "^3.2.13",
+    "vue": "^3.4.29",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
