--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "coin-bank",
   "version": "0.1.0",
-  "private": true,
+  "private": true,        
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "cypress open"
   },
   "dependencies": {
     "axios": "^1.7.2",
@@ -24,9 +25,18 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "cypress": "^13.13.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0"
-  }
+  },
+  "description": "```\r npm install\r ```",
+  "main": ".eslintrc.js",
+  "keywords": [
+    "cypress",
+    "testing"
+  ],
+  "author": "barengo abigail",
+  "license": "ISC"
 }
